test/tests/stages/18_structures/invalid_types/initializers/static_initializer_too_long.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  struct
  identifier(pair)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  }
  ;
  struct
  identifier(pair)
  identifier(p)
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
